Fixed a flexbox wrapping issue on the About page.

--- a/src/index.css
+++ b/src/index.css
@@ -74,9 +74,6 @@ body {
 .menu-item-unscrolled {
   font-size: 24px;
 }
-.flex-col-reverse {
-  flex-direction: column-reverse !important;
-}
 .brandmark-scrolled {
   height: 40px;
 }
